# aoc-2022

./: .gitignore  README.md
day-1/: .gitignore  README.md  exerciseA.pas  exerciseB.pas  second-task.js
day-10/: README.md  exercise-a.go  exercise-b.go
day-11/: ExerciseA.java  ExerciseB.java  README.md
day-12/: README.md  exercise-a.php  exercise-b.php
day-13/: README.md
day-13/kv/: mix.exs
day-13/kv/lib/: exercise-a.exs  exercise-b.exs  kv.ex
day-14/: README.md  exercise-a.cpp  exercise-b.cpp
day-15/: README.md  exercise-a.c  exercise-a.out  exercise-b.c
day-2/: .gitignore  README.md  exerciseA.f90  exerciseB.f90
day-3/: README.md  exerciseA.rb  exerciseB.rb
day-4/: .gitignore  README.md  exercise_a.adb  exercise_b.adb
day-5/: Cargo.toml  README.md
day-5/src/: exercise-a.rs  exercise-b.rs
day-6/: README.md  exercise-a.dart  exercise-b.dart
day-7/: README.md  exercise-a.py  exercise-b.py
day-8/: README.md  exercise-a.pl  exercise-b.pl
day-9/: README.md  exercise-a.r  exercise-b.r
old-day-1/: first-task.js
