[package]
name = "day-5"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "exercise-a"
path = "src/exercise-a.rs"

[[bin]]
name = "exercise-b"
path = "src/exercise-b.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"